created session and ability to logout

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,3 +14,4 @@
         <a href="/signup"><button id="signup" class="btn-no-style">Don't have an account? Sign up!</button></a>
      </div>
  </form>
+ <script src="/javascript/login.js"></script>
