--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,17 @@
+<div class="account">
 <div>
-    <h3>Create a Tech Blog Account</h3>
+    <h2>Create a Tech Blog Account</h2>
     <p>Gain access to view posts, leave comments, and many more features!</p>
 </div>
 <form class="signup-form">
     <div>
-        <label for="username-signup">User Name:</label>
-        <input type="text" id="username-signup" placeholder="User Name" />
+        <input type="text" id="username-signup" placeholder="Username" />
     </div>
     <div>
-        <label for="password-signup">Password:</label>
         <input type="text" id="password-signup" placeholder="Password" />
     </div>
     <div>
-        <button type="submit">Sign Up</button>
+        <button type="submit" class="btn btn-signup">Sign Up</button>
     </div>
 </form>
+</div>
