--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,10 @@
+:root {
+    --white: #f5f5f5;
+    --darkgreen: #2f4f4f;
+    --lightgreen: #8fbc8f;
+    --grass: #006400;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,30 +12,151 @@
 }
 
 body, html {
-    background-color:darkseagreen;
-    color:darkslategrey;
+    background-color: var(--lightgreen);
+    color: var(--darkgreen);
 }
 
+/* header style */
 header {
+    padding: 20px 15px;
+    background-color: var(--grass);
+    color: var(--white);
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1%;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 header h1 {
-    font-size: 1em;
+    font-size: 32px;
+    text-align: center;
+}
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 15px;
+    font-size: 20px;
+}
+
+header nav ul li a {
+    padding: 10px 20px;
+    color: var(--white);
+    font-weight: lighter;
+    text-decoration: none;
+}
+
+header nav ul li a:hover {
+    color:salmon;
+}
+
+.title {
+    display: flex;
+    justify-content: space-around;
+}
+
+/* post-info style */
+
+.post-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 15px;
+    padding-top: 15px;
+}
+
+.posts-list-item {
+    margin: 18px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: 2px solid var(--darkgreen);
+}
+
+.post {
+    width: 100%;
+    height: 100%;
+}
+
+.post-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--darkgreen);
+    color: var(--white);
+    padding: 13px;
+}
+
+.post-body {
+    margin: 8px;
+    font-size: 18px;
+}
+
+.comments {
+    margin: 10px;
+    text-align: right;
+}
+
+/* log in and sign up style */
+.account {
+    text-align: center;
+    padding: 30px 50px;
+}
+
+.account h2 {
+    margin-bottom: 5px;
+}
+
+.login-form, .signup-form {
+    padding: 10px;
+}
+
+#username-login, #password-login, #username-signup, #password-signup {
+    margin: 3px;
+}
+
+#signup {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.btn-login, .btn-signup {
+    margin-top: 8px;
+    font-weight: bold;
+}
+
+.btn {
+    border-radius: 5px;
+    padding: 5px 12px;
+    font-size: 13px;
+    background-color: var(--darkgreen);
+    color: var(--white);
+}
+
+.btn:hover {
+    background-color: var(--grass);
 }
 
 textarea, input {
-    padding: .5%;
+    padding: 1.1%;
     border-radius: 5px;
     border: 1px solid #000000;
+    background-color: rgb(166, 235, 166);
 }
 
 textarea:focus, input:focus {
     outline: none;
     border: 1px solid #ffffff;
+    background-color: rgb(255, 255, 255, 0.8);
 }
 
 textarea {
