--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,7 @@
-<div>You are on the homepage</div>
+<div class="posts-container">
+    {{#each posts as |post|}}
+    <div class="posts-list-item">
+        {{> post-info post}}
+    </div>
+    {{/each}}
+</div>
