--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,6 @@
-<section class="create-post">
+<section class="modal">
+    <div class="modal-content">
+    <div class="create-post">
     <h2>Create New Post</h2>
     <form class = "new-post-form">
         <div>
@@ -7,20 +9,28 @@
         <div>
             <textarea id="new-post-body" name="new-post-body" placeholder="Content"></textarea>
         </div>
-        <button type="submit" class="btn">Create</button>
+        <button type="submit" class="btn">Publish</button>
     </form>
+    </div>
+    </div>
 </section>
+
+<button type="button" id="add-new-post" class="btn">Write New Blog Post</button>
 
 {{#if posts.length}}
 <section>
-    <h2>Your Posts</h2>
+    <h2>Your Blog Posts</h2>
     <div class="posts-container">
         {{#each posts as |post|}}
         <div class="posts-list-item">
-            {{> post-info post}}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit Post</a>
+            <button type="button" id="btn-post">{{> post-info post}}</button>
+            <div class="btn-modal">
+                <button type="button"><a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit</a></button>
+                <button type="button" class="btn btn-delete">Delete</button>
+            </div>
         </div>
         {{/each}}
+
     </div>
 </section>
 {{/if}}
