--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,38 +1,43 @@
 <section class="modal">
     <div class="modal-content">
-    <div class="create-post">
-    <h2>Create New Post</h2>
-    <form class = "new-post-form">
-        <div>
-            <input type="text" id="new-post-title" name="new-post-title" placeholder="Title" />
+        <div class="create-post">
+            <h2>Create New Post</h2>
+            <form class = "new-post-form">
+                <div>
+                    <input type="text" id="new-post-title" name="new-post-title" placeholder="Title" />
+                </div>
+                <div>
+                    <textarea id="new-post-body" name="new-post-body" placeholder="Content"></textarea>
+                </div>
+                <button type="submit" class="btn">Publish</button>
+                <button type="button" id="btn-close" class="btn btn-close">Close</button>
+            </form>
         </div>
-        <div>
-            <textarea id="new-post-body" name="new-post-body" placeholder="Content"></textarea>
-        </div>
-        <button type="submit" class="btn">Publish</button>
-    </form>
-    </div>
     </div>
 </section>
 
 <button type="button" id="add-new-post" class="btn">Write New Blog Post</button>
 
 {{#if posts.length}}
-<section>
+<section class="dashboard-list">
     <h2>Your Blog Posts</h2>
-    <div class="posts-container">
+    <div class="posts-dashboard">
         {{#each posts as |post|}}
-        <div class="posts-list-item">
-            <button type="button" id="btn-post">{{> post-info post}}</button>
-            <div class="btn-modal">
-                <button type="button"><a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit</a></button>
-                <button type="button" class="btn btn-delete">Delete</button>
+        <div class="posts-list-item-dashboard">
+            {{> post-info post}}
             </div>
-        </div>
+            <div class="btn-edit-container">
+                <div>
+                    <button type="button" class="btn btn-edit"><a href="/dashboard/edit/{{id}}" id="btn-edit">Edit</a></button>
+                </div>
+                <div>
+                    <button type="button" data-id="{{id}}" class="btn btn-delete-dashboard">Delete</button>
+                </div>
+            </div>
         {{/each}}
-
     </div>
 </section>
 {{/if}}
 
 <script src="/javascript/add-post.js"></script>
+<script src="/javascript/dash-delete.js"></script>
