--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/dashboard">Dashboard</a></li>
                     {{#if loggedIn}}
-                    <li><button id="logout" class="btn-no-style">Log Out</button></li>
+                    <li id="logout">Log Out</li>
                     {{else}}
                     <li><a href="/login">Log In</a></li>
                     <li><a href="/signup">Sign Up</a></li>
