--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -12,7 +12,7 @@
             <span>Posted by you on {{format_date post.created_at}}</span>
         </div>
         <div class="btn-container">
-            <button type="submit" class="btn btn-post">Save Post</button>
+            <button type="button" class="btn btn-post">Save Post</button>
             <button type="button" class="btn btn-delete">Delete Post</button>
             <button type="button" class="btn btn-comment">Add Comment</button>
         </div>
