--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -40,3 +40,6 @@
 {{/if}}
 
 <script src="/javascript/add-post.js"></script>
+{{#if posts.length}}
+<script src="/javascript/dash-delete.js"></script>
+{{/if}}
