--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -6,9 +6,12 @@
         <ul>    
         {{#each this}}
             <li class="comments-list">
-                <span class="comment-user">{{user.username}}</span> on {{format_date created_at}} said {{comment_text}}
+                <div><span class="comment-user">{{user.username}}</span> on {{format_date created_at}} said {{comment_text}}</div>
+                <div><button type="button" class="btn btn-delete-comment" data-id="{{id}}">Delete</button></div>         
             </li>
         {{/each}}
         </ul>
     </div>
 </section>
+
+<script src="/javascript/delete-comment.js"></script>
