--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,19 @@
 <div class="account">
-<div>
-    <h2>Create a Tech Blog Account</h2>
-    <p>Gain access to view posts, leave comments, and many more features!</p>
-</div>
-<form class="signup-form">
     <div>
-        <input type="text" id="username-signup" placeholder="Username" />
+        <h2>Create a Tech Blog Account</h2>
+        <p>Gain access to view posts, leave comments, and many more features!</p>
     </div>
-    <div>
-        <input type="text" id="password-signup" placeholder="Password" />
-    </div>
-    <div>
-        <button type="submit" class="btn btn-signup">Sign Up</button>
-    </div>
-</form>
+    <form class="signup-form">
+        <div>
+            <input type="text" id="username-signup" placeholder="Username" />
+        </div>
+        <div>
+            <input type="text" id="password-signup" placeholder="Password" />
+        </div>
+        <div>
+            <button type="submit" class="btn btn-signup">Sign Up</button>
+        </div>
+    </form>
 </div>
 
-<script src="/javascript/signup.js>"></script>
-<script src="/javascript/login.js>"></script>
+ <script src="/javascript/signup.js"></script>
