--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -21,3 +21,6 @@
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 {{/if}}
+{{#if postOwner}}
+<script src="/javascript/delete-comment.js"></script>
+{{/if}}
