--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,6 +13,9 @@
         <div>
             <button type="submit" class="btn btn-signup">Sign Up</button>
         </div>
+        <div>
+            <button id="login" class="btn-no-style"><a href="/login">Already have an account? Log in!</a></button>
+        </div>
     </form>
 </div>
 
