--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,5 @@
 <article class="post">
+  <a href="/post/{{id}}">
       <div class="post-title">
         <h3>{{title}}</h3>
         <span>Posted by {{user.username}} on {{format_date created_at}}</span>
@@ -7,6 +8,7 @@
           {{post_text}}
       </div>
       <div class="comments">
-          <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+          {{comments.length}} {{format_plural "comment" comments.length}}
       </div>
+    </a>
 </article>
