--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,17 +24,8 @@
     <div class="posts-dashboard">
         {{#each posts as |post|}}
         <div class="posts-list-item-dashboard">
-            {{> post-info post}}
-            <div class="btn-edit-container">
-                <div>
-                    <button type="button" class="btn btn-edit"><a href="/dashboard/edit/{{id}}" id="btn-edit">Edit</a></button>
-                </div>
-                <div>
-                    <button type="button" data-id="{{id}}" class="btn btn-delete-dashboard">Delete</button>
-                </div>
+            {{> post-info post=post dashUserId=dashUserId}}
             </div>
-            </div>
-            
         {{/each}}
     </div>
 </section>
