--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,4 +1,5 @@
 <section>
+    <a class="back" href="/dashboard"> &larr; Back to dashboard</a>
     <div class="edit-post-container">
     <h2>Edit Post</h2>
     <form class="edit-post-form">
