--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,14 +1,28 @@
 <article class="post">
   <a href="/post/{{id}}">
       <div class="post-title">
-        <h3>{{title}}</h3>
+        <h2>{{title}}</h2>
         <span>Posted by {{user.username}} on {{format_date created_at}}</span>
       </div>
+  </a>
       <div class="post-body">
+        <div class="post-text">
           {{post_text}}
-      </div>
-      <div class="comments">
-          {{comments.length}} {{format_plural "comment" comments.length}}
-      </div>
-    </a>
+        </div>
+        <div class="post-right-container">
+          {{#if post}}
+          <div class="btn-edit-container">
+            <div>
+              <button type="button" class="btn btn-edit"><a href="/dashboard/edit/{{id}}" id="btn-edit">Edit</a></button>
+            </div>
+            <div>
+                <button type="button" data-id="{{id}}" class="btn btn-delete-dashboard">Delete</button>
+            </div>
+          </div>
+          {{/if}}
+          <div class="comments">
+            {{comments.length}} {{format_plural "comment" comments.length}}
+          </div>
+        </div>
+      </div
 </article>
