reconnected moved edit and delete buttons to event listeners

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,5 +1,5 @@
 <section>
-    <a class="back" href="/dashboard"> &larr; Back to dashboard</a>
+    <a class="back" href="/dashboard"> &larr; Back to Dashboard</a>
     <div class="edit-post-container">
     <h2>Edit Post</h2>
     <form class="edit-post-form">
