--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,10 +1,17 @@
 <article class="post">
+  {{!-- {{#if post}} --}}
   <a href="/post/{{id}}">
       <div class="post-title">
         <h2>{{title}}</h2>
         <span>Posted by {{user.username}} on {{format_date created_at}}</span>
       </div>
   </a>
+  {{!-- {{#else}}
+      <div class="post-title">
+        <h2>{{title}}</h2>
+        <span>Posted by {{user.username}} on {{format_date created_at}}</span>
+      </div>
+  {{/if}} --}}
       <div class="post-body">
         <div class="post-text">
           {{post_text}}
@@ -13,7 +20,7 @@
           {{#if post}}
           <div class="btn-edit-container">
             <div>
-              <button type="button" class="btn btn-edit"><a href="/dashboard/edit/{{id}}" id="btn-edit">Edit</a></button>
+              <button type="button" class="btn btn-edit" data-post-id="{{id}}">Edit</button>
             </div>
             <div>
                 <button type="button" data-id="{{id}}" class="btn btn-delete-dashboard">Delete</button>
